--- a/style.css
+++ b/style.css
@@ -27,23 +27,47 @@ a {
 }
 /* Google Site Name */
 #main {
+    height: 90px;
+    width: 303px; 
     position: relative;
     justify-self: center;
     align-self: center;
-
-
+    top: 156px; 
+    left: 571px; 
+    right: 874px; 
+    bottom: 246px; 
+}
+.search-box {
+  width: 582px;
+  height: 44px;
+  display: flex;
+  flex: 1;
+  padding: 5px 8px 0 16px;
+  padding-left: 14px;
+  position: relative; 
+  left: 523px;
+  top: 175px;
 }
 
 /* Magnifying Glass */
-svg {
+  .mag-glass {
     height: 20px; 
-    width: 20px; 
-    color: rgb(154, 160, 166); 
-    display: block; 
-    font-family: Arial, sans-serif;  
-    line-height: 24px; 
+    width: 20px;
+    color: rgb(154, 160, 166);
     position: relative;
-    left: 100px; 
+    left: 100px;
+    display: block;
+    font-family: Arial, sans-serif;  
+    line-height: 24px;  
+  }
+
+/* Voice Search */
+  .voice-search {
+    height: 24px;
+    width: 24px;
+    vertical-align: middle;
+    line-height: 44px;
+    overflow: hidden;
   }
 
   footer {
