--- a/style.css
+++ b/style.css
@@ -6,25 +6,77 @@ ul {
 
 li {
     display: inline;
+    padding: 0px 0px 0px 15px;
 }
 
 a {
     text-decoration: none;
-    padding: 0px 0px 0px 15px;
     font-family: arial, sans-serif;
     font-size: 13px;
     color: rgb(0, 0, 0)
 }
+
+.apps-button {
+  position: relative;
+  display: inline-block;
+  line-height: normal;
+  text-align: left;
+  white-space: nowrap;
+  color: #000;
+  background-position: -132px -38px;
+  opacity: .55;
+  background-image: url('//ssl.gstatic.com/gb/images/i2_2ec824b0.png');
+  background-size: 528px 68px;
+  outline: none;
+  vertical-align: middle;
+  border-radius: 2px;
+  box-sizing: border-box;
+  height: 30px;
+  width: 30px;
+  line-height: normal;
+  text-align: left;
+  white-space: nowrap;
+  font-size: 13px;
+}
+
+.sign-in-button {
+  border: 1px solid #4285f4;
+  font-weight: bold;
+  outline: none; 
+  color: #fff; 
+  background: -webkit-linear-gradient(top, #4387fd, #4683ea);
+  background-image: -webkit-linear-gradient(top, rgb(67, 135, 253), rgb(70, 131, 234));
+  display: inline-block;
+  line-height: 28px;
+  padding: 0 12px;
+  border-radius: 2px;
+  font-family: arial, sans-serif;
+  text-align: left;
+  white-space: nowrap;
+  font-size: 13px;
+}
+
 /* Unvisited Links */
 .right-side-header {
     color: rgb(0, 0, 0);
-    opacity: 0.75;
     text-align: right;
+    position: relative;
+    right: 10px; 
+    bottom: 10px; 
+    height: 30px;
+    width: 280.94;
+    padding: 0px 30px;
 }
 .left-side-header {
     color: rgba(0,0,0,0.87);
     text-align: left;
+    height: 15px;
+    margin: 7px 0 0 10px; 
+    position: relative;
+    top: 13px; 
+    right: 7px; 
 }
+
 /* Google Site Name */
 #main {
     height: 90px;
@@ -32,7 +84,7 @@ a {
     position: relative;
     justify-self: center;
     align-self: center;
-    top: 156px; 
+    top: 116px; 
     left: 571px; 
     right: 874px; 
     bottom: 246px; 
