--- a/style.css
+++ b/style.css
@@ -92,25 +92,33 @@ a {
 .search-box {
   width: 582px;
   height: 44px;
+  background: #fff;
+  border: 1px solid #dfe1e5;
+  border-radius: 24px;
+  box-shadow: none;
+  z-index: 3;
+  margin: 0 auto; 
   display: flex;
-  flex: 1;
-  padding: 5px 8px 0 16px;
-  padding-left: 14px;
-  position: relative; 
-  left: 523px;
-  top: 175px;
+  position: relative;
+  top: 150px; 
+  bottom: 322px; 
 }
 
 /* Magnifying Glass */
   .mag-glass {
     height: 20px; 
     width: 20px;
-    color: rgb(154, 160, 166);
+    color: #9aa0a6;
     position: relative;
-    left: 100px;
-    display: block;
+    left: 425px;
+    top: 115px; 
+    display: inline-block;
     font-family: Arial, sans-serif;  
     line-height: 24px;  
+    z-index: 4;
+    margin-top: 3px;
+    fill: currentColor;
+    overflow: hidden;
   }
 
 /* Voice Search */
@@ -120,8 +128,35 @@ a {
     vertical-align: middle;
     line-height: 44px;
     overflow: hidden;
+    position: relative;
+    left: 930px;
+    top: 107px; 
+    z-index: 4; 
   }
-
+ 
+  .button1, .button2 {
+    background-image: -webkit-linear-gradient(top, #f5f5f5, #f1f1f1);
+    background-color: #f2f2f2;
+    border: 1px solid #f2f2f2;
+    border-radius: 4px;
+    color: #5F6368;
+    font-family: arial, sans-serif;
+    font-size: 14px; 
+    margin: 11px 4px; 
+    padding: 0 16px;
+    line-height: 27px;
+    height: 36px;
+    min-width: 54px;
+    text-align: center;
+    cursor: pointer;
+    user-select: none;
+    text-rendering: auto;
+    letter-spacing: normal;
+    word-spacing: normal;
+    position: relative;
+    top: 140px; 
+    left: 550px; 
+}
   footer {
     width: 100%;
     background: #f2f2f2;
